# media-intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Containerfile  Containerfile.dev  Containerfile.gcp  DEPLOYMENT.md  Dockerfile  Dockerfile.gcp  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  build.sh  cloudbuild.yaml  compose.yaml  config.example.yaml  config.yaml  deploy.sh  podman-compose.yml  pyproject.toml  requirements.txt  run.sh  test.sh
.agents/agentdb-state-manager/scripts/: record_sync.py  sync_engine.py  sync_todo_to_db.py  worktree_agent_integration.py
.agents/bmad-planner/scripts/: create_planning.py
.agents/git-workflow-manager/scripts/: create_release.py  create_worktree.py  daily_rebase.py  pr_workflow.py  release_workflow.py  semantic_version.py  tag_release.py
.agents/initialize-repository/scripts/: initialize_repository.py
.agents/speckit-author/scripts/: create_specifications.py  update_asbuilt.py
.agents/workflow-utilities/scripts/: create_skill.py  generate_claude_md.py  update_claude_md_refs.py  update_claude_references.py
.agents/workflow-utilities/scripts/vcs/: azure_adapter.py  config.py  github_adapter.py
.claude-state/: agentdb.duckdb
.claude/skills/agentdb-state-manager/scripts/: init_database.py
.claude/skills/git-workflow-manager/scripts/: cleanup_feature.py  cleanup_release.py  create_release.py  (+1 more)
.github/: copilot-instructions.md
ARCHIVED/: CLAUDE.md
cache/: .gitkeep
data/input/: .gitkeep
data/output/: .gitkeep
docs/: API.md  COST_ANALYSIS.md  README_GCP.md  SECURITY.md
models/: .gitkeep
planning/: CLAUDE.md  workflow-migration-plan.md
planning/apply-templates-workflow/: CLAUDE.md  README.md  architecture.md  epics.md  requirements.md
planning/apply-templates-workflow/ARCHIVED/: CLAUDE.md  README.md
planning/gcp-processing/: CLAUDE.md  README.md  architecture.md  epics.md  requirements.md
planning/gcp-processing/ARCHIVED/: CLAUDE.md
specs/: CLAUDE.md
specs/apply-templates-workflow/: CLAUDE.md  README.md  plan.md  spec.md
specs/apply-templates-workflow/ARCHIVED/: CLAUDE.md
specs/gcp-processing/: CLAUDE.md  README.md  plan.md  spec.md
specs/gcp-processing/ARCHIVED/: CLAUDE.md  README.md
src/: CLAUDE.md  __init__.py  audio_processor.py  diarization.py  gcp_utils.py  key_manager.py  main.py  process_audio.py  situation.py  situation_classifier.py  speech_client.py  storage_manager.py  transcription.py  utils.py
terraform/: CLAUDE.md  iam.tf  main.tf  outputs.tf  variables.tf
tests/: CLAUDE.md  __init__.py  test_audio_processor.py  test_diarization.py  test_gcp_integration.py  test_integration.py  test_key_manager.py  test_situation.py  test_situation_classifier.py  test_speech_client.py  test_storage_manager.py  test_transcription.py
(+2 files in other folders)
