# pyproject.toml for media-intelligence
# Containerized audio processing system for extracting structured intelligence

[project]
name = "media-intelligence"
version = "1.0.0"
description = "Containerized audio processing system for extracting structured intelligence from recorded media"
requires-python = ">=3.11"
dependencies = [
    # Transcription
    "faster-whisper>=1.0.3",
    "ctranslate2>=4.5.0",

    # Diarization
    "pyannote.audio>=3.1.1",
    "torch>=2.1.2",
    "torchaudio>=2.1.2",

    # Audio scene classification
    "transformers>=4.36.2",

    # Google Cloud APIs
    "google-cloud-speech>=2.21.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-pubsub>=2.18.4",
    "google-cloud-logging>=3.8.0",
    "google-cloud-error-reporting>=1.10.0",
    "google-cloud-firestore>=2.13.1",
    "google-cloud-aiplatform>=1.38.1",

    # Framework (Cloud Run)
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
    "functions-framework>=3.5.0",

    # Audio processing
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "scipy>=1.11.4",
    "numpy>=1.26.2",

    # Utilities
    "tqdm>=4.66.1",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
    "tenacity>=8.2.3",
    "requests>=2.31.0",

    # Workflow system dependencies
    "click>=8.1.0",
    "httpx>=0.27.0",
    "duckdb>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 170
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
# E: pycodestyle errors
# F: pyflakes
# I: isort
# N: pep8-naming
# W: pycodestyle warnings
# B: flake8-bugbear
# UP: pyupgrade

ignore = ["E402"]
# E402: Module level import not at top of file
# Ignored because skill scripts use sys.path.insert before imports

[tool.ruff.lint.per-file-ignores]
".claude/**/*.py" = ["N999", "B007", "B904", "B905"]
".agents/**/*.py" = ["N999", "B007", "B904", "B905"]
"tests/**/*.py" = ["N999"]

[tool.uv]
# Exclude problematic transitive dependencies without ARM64 Linux wheels
# torchcodec is pulled by torch but not required for our use case
constraint-dependencies = [
    "torchcodec<0.0.1",  # Effectively exclude - no ARM64 Linux wheels
]

dev-dependencies = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.1.6",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", ".claude*", ".agents*", "terraform*", "docs*", "planning*", "specs*"]
